<resources>
    <string name="app_name">ChatApp</string>
    <string name="message_me">Message Me</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="log_in">Log in</string>
    <string name="welcome">Welcome</string>
    <string name="not_a_member_sign_up">Not a member? Sign up</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="Or">or login with</string>
    <string name="member_sign_in">have a ccount? Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="or_signup">"or sign up with "</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="facebook_app_id">825876334818779</string>
    <string name="fb_login_protocol_scheme">fb825876334818779</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="creat_account">Creat Account</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">send</string>
    <!--    <string name="default_web_client_id"></string>-->

</resources>