<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:id="@+id/ConstraintLayout"
    android:background="@android:color/white"
    tools:context=".activity.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <TextView
        android:id="@+id/tv_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/margin_16"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="@dimen/size20"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/mstart32"
        android:layout_marginEnd="@dimen/mstart32"
        android:background="@drawable/btn_bgwhite"
        android:gravity="center"
        android:padding="@dimen/margin10"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bg">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/border_edittext"
            android:drawableStart="@drawable/ic_user_tie"
            android:drawablePadding="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_edittext"
            android:drawableStart="@drawable/ic_unlock_alt"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
       />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:textSize="@dimen/size_12"
                android:text="@string/not_a_member_sign_up"
                android:textColor="@color/colorPink" />

            <TextView
                android:id="@+id/tv_forgetpass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/forget_password"
                android:textSize="@dimen/size_12"
                android:textColor="@color/colorPink" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="?android:borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mstart32"
            android:layout_marginTop="@dimen/mt_btnLogin"
            android:layout_marginEnd="@dimen/mstart32"
            android:background="@drawable/btn_bg_bue"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="#fff"
          />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin10"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="0.5dp"
                android:background="@color/colorGrey"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Or"
                android:layout_marginStart="@dimen/margin10"
                android:layout_marginEnd="@dimen/margin10"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="0.5dp"
                android:background="@color/colorGrey"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mstart32"
            android:layout_marginTop="@dimen/mt_btnLogin"
            android:layout_marginEnd="@dimen/mstart32"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_google"
                style="?android:borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                 />

            <Button
                android:id="@+id/btn_facebook"
                android:layout_width="0dp"
                style="?android:borderlessButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin10"
                android:background="@drawable/btn_bg"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"

                />
<!--            <com.facebook.login.widget.LoginButton-->
<!--                android:id="@+id/btn_facebook"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginStart="@dimen/margin10"-->
<!--                fb:com_facebook_login_text ="@string/facebook"-->
<!--                style="@style/FacebookLoginButton"/>-->
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>