<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@android:color/white"
    tools:context=".activity.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tv_bg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/creat_account"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btn_pickImg"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_baseline_person"
            app:civ_border_width="1dp"
            app:civ_border_color="#FFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bg" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/mstart32"
        android:layout_marginEnd="@dimen/mstart32"
        android:background="@drawable/btn_bgwhite"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edittext"
            android:drawableStart="@drawable/ic_user_tie"
            android:drawablePadding="@dimen/padding16"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding15"
            android:textSize="@dimen/size14" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mtop15"
            android:background="@drawable/border_edittext"
            android:drawableStart="@drawable/ic_user_tie"
            android:drawablePadding="@dimen/padding16"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding15"
            android:textSize="@dimen/size14" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mtop15"
            android:background="@drawable/border_edittext"
            android:drawableStart="@drawable/ic_unlock_alt"
            android:drawablePadding="@dimen/padding16"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/padding15"
            android:textSize="@dimen/size14" />

        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:gravity="start"
            android:text="@string/member_sign_in"
            android:textColor="@color/colorPink" />


        <Button
            android:id="@+id/btn_signup"
            style="?android:borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mstart32"
            android:layout_marginTop="@dimen/mt_btnLogin"
            android:layout_marginEnd="@dimen/mstart32"
            android:background="@drawable/btn_bg_bue"
            android:fontFamily="@font/poppins"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@color/colorGrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin10"
                android:layout_marginEnd="@dimen/margin10"
                android:text="@string/or_signup" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@color/colorGrey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mstart32"
            android:layout_marginTop="@dimen/mt_btnLogin"
            android:layout_marginEnd="@dimen/mstart32"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_google"
                style="?android:borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/google"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btn_facebook"
                style="?android:borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin10"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/facebook"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>